Fixed paths for GitHub

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container mb6">
     <div class="row text-center">
       <div class="hero__box">
-        <div class="hero__image hidden-xs col-sm-12"><img src="assets/img/rocket.svg"
+        <div class="hero__image hidden-xs col-sm-12"><img src="{{ site.baseurl }}/assets/img/rocket.svg"
             alt="rocket flying out of the monitor" /></div>
         <div class="hero__text col-sm-12">
           <h1>DeployStack</h1>
