--- a/ssl.html
+++ b/ssl.html
@@ -14,8 +14,8 @@ layout: default
       <div class="container">
         <div class="row mt4 mb6">
           <div class="col-xs-12 col-sm-6"><img class="analytics-dashboard-img img-rounded img-responsive img-raised mha"
-              alt="Google analytics dashboard" src="assets/img/letsencrypt_1x.jpg"
-              srcset="assets/img/letsencrypt_1x.jpg 1x, assets/img/letsencrypt_2x.jpg 2x" /></div>
+              alt="Google analytics dashboard" src="{{ site.baseurl }}/assets/img/letsencrypt_1x.jpg"
+              srcset="{{ site.baseurl }}/assets/img/letsencrypt_1x.jpg 1x, {{ site.baseurl }}/assets/img/letsencrypt_2x.jpg 2x" /></div>
           <div class="col-xs-12 col-sm-6">
             <h2>SSL certificate</h2>
             <p>For a long time, the only way to get an SSL (or TLS) certificate was to pay $30 or more per year.
