--- a/analytics.html
+++ b/analytics.html
@@ -57,11 +57,11 @@ layout: default
                 target="_blank" href="https://open.segment.com/">open sourced</a> most of their tools.</p>
           </div>
           <div class="col-xs-12 col-sm-6"><img class="img-rounded img-responsive img-raised mha mt6"
-              alt="Google analytics dashboard" src="assets/img/stats_1x.jpg"
-              srcset="assets/img/stats_1x.jpg 1x, assets/img/stats_2x.jpg 2x" /><img
+              alt="Google analytics dashboard" src="{{ site.baseurl }}/assets/img/stats_1x.jpg"
+              srcset="{{ site.baseurl }}/assets/img/stats_1x.jpg 1x, {{ site.baseurl }}/assets/img/stats_2x.jpg 2x" /><img
               class="img-rounded img-responsive img-raised mha mt6" alt="Piwik dashboard"
-              src="assets/img/stats2_1x.jpg"
-              srcset="assets/img/stats2_1x.jpg 1x, assets/img/stats2_2x.jpg 2x" /></div>
+              src="{{ site.baseurl }}/assets/img/stats2_1x.jpg"
+              srcset="{{ site.baseurl }}/assets/img/stats2_1x.jpg 1x, {{ site.baseurl }}/assets/img/stats2_2x.jpg 2x" /></div>
         </div>
       </div>
     </div>
