--- a/404.html
+++ b/404.html
@@ -2,24 +2,23 @@
 permalink: /404.html
 layout: default
 ---
-
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
+  html, body {
+    height:100%;
   }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
+  .fill {
+    /* Full height - footer */
+    min-height: calc(100% - 133px);
   }
 </style>
 
-<div class="container">
-  <h1>404</h1>
+<section class="fill hero pt7">
+  <div class="container">
+      <div class="row tc">
+        <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+        <p><strong>Page not found :(</strong></p>
+        <p>The requested page could not be found.</p>
+      </div>
+  </div>
+</section>
