Update Cloudflare info

--- a/cdn.html
+++ b/cdn.html
@@ -49,12 +49,9 @@ layout: default
 {% endcapture %}
 
 {% capture cdn4 %}
-<!-- TODO: Update this with correct information -->
 <ul>
-  <li><strong>Free</strong> package: 3 page rules</li>
-  <li><strong>$20</strong>/month: 20 page rules</li>
-  <li><strong>$200</strong>/month: 50 page rules</li>
-  <li>DDoS protection <br>(24/7/365 uptime in higher plans)</li>
+  <li>One of the biggest CDN providers offers a very generous free tier. The free tier has <strong>no usage limits</strong> and offers access to <strong>all the points of presence</strong>. It's perfectly fine for small and medium hobby projects.</li>
+  <li>Paid plans start from $20/month and offer additional features like image optimization, better support, and even a 24/7/365 uptime guarantee in the highest plan.</li>
   <li><a class="btn btn-primary b" rel="nofollow" target="_blank" href="https://www.cloudflare.com/">Open Cloudflare</a></li>
 </ul>
 {% endcapture %}
