Add info that project is not actively maintained

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@ layout: default
     <section class="container">
       <div class="row">
         <div class="col-sm-12 mb6">
+          <h2 id="outdated" class="mt6 mb4 text-center">This project is no longer actively maintained!</h2>
+          <p>The list of features and prices for each service listed on this page are constantly changing. I no longer have time to update this project after each change (and to be honest, updating the content of a website is boring, compared with creating a new, fascinating side-project).
+          </p>
+          <p>While the prices listed on this page might be outdated, I still <strong>recommend all those services</strong>. I use them with both my professional and personal projects.
+          </p>
           <h2 class="mt6 mb4 text-center">About</h2>
           <p>DeployStack is a curated list of tools and services that are aimed at helping web developers launching their websites. Companies are picked based on their value for money and good reviews - if you offer a good product in a good price, people will recommend you. You can easily find these recommendations on Hacker News, reddit or even Lifehacker (websites with reviews can have fake reviews, but it's significantly harder to forge 1000+ upvotes on reddit or a survey on Lifehacker).</p>
           <p>I try to focus on recommending tools and companies that have been around for at least couple of years. Hundreds of new companies come and go every year and having a peace of mind knowing that your website (and data) won't disappear the next day is worth paying a few dollars extra.</p>
