--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <section class="hero pt7 pb6">
+  {% include outdated.html %}
   <div class="container">
     <div class="row">
       <div class="hero__box">
