Fixed broken links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: default
               </div>
               <p>{{ item.description }}</p>
               <div class="text-center">
-                <a class="btn btn-warning" href="{{ item.url }}">View</a>
+                <a class="btn btn-warning" href="{{ site.baseurl }}{{ item.url }}">View</a>
               </div>
             </div>
           </div>
